# Linux_Hyperspectral_Image_Processing_Software

./: CMakeLists.txt  Makefile  README.md  bus.cc  bus.h  main.cc  settings.cfg  share.cc  share.h  spec.json  stubclient.h  taskscheduling.h
db/: DBtools.cc  DBtools.h  hyperspectralDB.cc  hyperspectralDB.h
